// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. video 1`] = `
<View
  accessibilityLabel="splash-component"
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  testID="splash-component"
>
  <Image
    uri="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
  />
  <View>
    <PlayIcon />
  </View>
</View>
`;

exports[`2. video without a poster image 1`] = `
<View
  accessibilityLabel="splash-component"
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  testID="splash-component"
>
  <View />
  <View>
    <PlayIcon />
  </View>
</View>
`;
